0-lexical-analyzer/test-cases/test_case_2_error.c
// error 
#include <stdio.h>

// main function of the program
int main () {
    

    /**
     * Various identifier declarations and initializations along with data types and 
     * few keywords.
     */
     long int 9c;
     printf("9c is not a valid identifier\n");
     long long int 91_DC = 14;
     printf("91_DC is not a valid identifier\n");
     
}